rules.v4
# Generated by iptables-save v1.8.7 on Fri Apr 26 16:39:20 2024
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [4394:468847]
:FORWARD ACCEPT [1534:314795]
:OUTPUT ACCEPT [6763:686543]
:POSTROUTING ACCEPT [0:0]
:internet - [0:0]
-A PREROUTING -i enp0s8 -p tcp -m tcp --dport 80 -j internet
-A PREROUTING -i enp0s8 -p tcp -m tcp --dport 80 -j internet
-A PREROUTING -i enp0s8 -p tcp -m tcp --dport 80 -j internet
-A PREROUTING -i enp0s8 -p tcp -m tcp --dport 80 -j internet
-A PREROUTING -i enp0s8 -p tcp -m tcp --dport 80 -j internet
-A PREROUTING -i enp0s8 -p tcp -m tcp --dport 80 -j internet
-A internet -j MARK --set-xmark 0x63/0xffffffff
-A internet -j MARK --set-xmark 0x63/0xffffffff
-A internet -j MARK --set-xmark 0x63/0xffffffff
-A internet -j MARK --set-xmark 0x63/0xffffffff
COMMIT
# Completed on Fri Apr 26 16:39:20 2024
# Generated by iptables-save v1.8.7 on Fri Apr 26 16:39:20 2024
*filter
:INPUT DROP [36:5529]
:FORWARD DROP [17:1136]
:OUTPUT DROP [578:40544]
-A INPUT -i enp0s9 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -i enp0s3 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m mark --mark 0x63 -j DROP
-A INPUT -i enp0s8 -m mark --mark 0x63 -j DROP
-A FORWARD -m mark --mark 0x63 -j DROP
-A FORWARD -s 192.168.70.0/24 -i enp0s8 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.70.0/24 -i enp0s8 -p tcp -m tcp --dport 443 -j ACCEPT
-A FORWARD -d 192.168.70.0/24 -i enp0s3 -p tcp -m tcp --sport 80 -j ACCEPT
-A FORWARD -d 192.168.70.0/24 -i enp0s3 -p tcp -m tcp --sport 443 -j ACCEPT
-A FORWARD -s 192.168.70.0/24 -d 192.168.110.1/32 -i enp0s8 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 192.168.110.1/32 -d 192.168.70.0/24 -i enp0s3 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -s 192.168.70.0/24 -d 8.8.4.4/32 -i enp0s8 -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -s 8.8.4.4/32 -d 192.168.70.0/24 -i enp0s3 -p udp -m udp --sport 53 -j ACCEPT
-A FORWARD -d 192.168.80.20/32 -i enp0s8 -p tcp -m tcp --dport 3306 -j ACCEPT
-A FORWARD -s 192.168.80.20/32 -i enp0s9 -p tcp -m tcp --sport 3306 -j ACCEPT
-A FORWARD -d 192.168.80.20/32 -i enp0s3 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 192.168.80.20/32 -i enp0s9 -p tcp -m tcp --sport 80 -j ACCEPT
-A FORWARD -d 192.168.80.20/32 -i enp0s8 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -d 192.168.80.20/32 -i enp0s9 -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -o enp0s9 -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
COMMIT
# Completed on Fri Apr 26 16:39:20 2024
# Generated by iptables-save v1.8.7 on Fri Apr 26 16:39:20 2024
*nat
:PREROUTING ACCEPT [171:16265]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [626:43570]
:POSTROUTING ACCEPT [50:3202]
-A PREROUTING -i enp0s8 -p tcp -m mark --mark 0x63 -m tcp --dport 80 -j DNAT --to-destination 192.168.80.20:80
-A PREROUTING -d 192.168.70.10/32 -i enp0s8 -p tcp -m tcp --dport 3306 -j DNAT --to-destination 192.168.80.20:3306
-A PREROUTING -i enp0s3 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.80.20:80
-A PREROUTING -d 192.168.70.10/32 -i enp0s8 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.80.20:80
-A POSTROUTING -s 192.168.70.0/24 -o enp0s3 -j MASQUERADE
COMMIT
# Completed on Fri Apr 26 16:39:20 2024
